[gd_scene load_steps=17 format=2]

[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/World.gd" type="Script" id=2]
[ext_resource path="res://scenes/Enemy.tscn" type="PackedScene" id=3]
[ext_resource path="res://themes/score_font.tres" type="DynamicFont" id=4]
[ext_resource path="res://scripts/Score.gd" type="Script" id=5]
[ext_resource path="res://scripts/ScreenShakeCamera2D.gd" type="Script" id=6]
[ext_resource path="res://scenes/Enemy2Blue.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/EnemyRed.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/EnemyPink.tscn" type="PackedScene" id=9]
[ext_resource path="res://themes/GamePausedFont.tres" type="DynamicFont" id=10]
[ext_resource path="res://objects/PauseMenuButtons.tscn" type="PackedScene" id=11]
[ext_resource path="res://themes/HighScoreFont.tres" type="DynamicFont" id=12]
[ext_resource path="res://scripts/HighScore.gd" type="Script" id=13]
[ext_resource path="res://assets/pic.png" type="Texture" id=14]
[ext_resource path="res://audio/World.mp3" type="AudioStream" id=16]
[ext_resource path="res://audio/ShootingBulletsSound.wav" type="AudioStream" id=17]

[node name="World" type="Node2D"]
script = ExtResource( 2 )
enemies = [ ExtResource( 3 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 9 ) ]

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 321, 181 )
z_index = 6

[node name="Enemy" parent="." instance=ExtResource( 3 )]
position = Vector2( 22, 21 )

[node name="EnemySpawnTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="Difficulty" type="Timer" parent="."]
autostart = true

[node name="UI" type="Node2D" parent="."]
z_index = 20

[node name="ControlScore" type="Control" parent="UI"]
margin_right = 640.0
margin_bottom = 360.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="UI/ControlScore"]
margin_right = 640.0
margin_bottom = 99.0
custom_colors/font_color = Color( 0, 1, 0.14902, 1 )
custom_fonts/font = ExtResource( 4 )
text = "100"
align = 1
script = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="HighScore" type="Label" parent="UI/ControlScore"]
margin_left = -7.0
margin_top = -70.0
margin_right = 633.0
margin_bottom = 29.0
custom_colors/font_color = Color( 0, 1, 0.14902, 1 )
custom_fonts/font = ExtResource( 12 )
text = "750"
align = 2
valign = 2
script = ExtResource( 13 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="PauseMenu" type="Control" parent="UI"]
pause_mode = 2
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="UI/PauseMenu"]

[node name="ColorRect" type="ColorRect" parent="UI/PauseMenu/CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.866667 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseTitle" type="Label" parent="UI/PauseMenu/CanvasLayer/ColorRect"]
margin_right = 641.0
margin_bottom = 107.0
custom_fonts/font = ExtResource( 10 )
text = "Game Paused"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeButton" parent="UI/PauseMenu/CanvasLayer/ColorRect" instance=ExtResource( 11 )]
margin_left = 232.0
margin_top = 176.0
margin_right = 392.0
margin_bottom = 216.0
text = "Resume"
script = null

[node name="MainMenuButton" parent="UI/PauseMenu/CanvasLayer/ColorRect" instance=ExtResource( 11 )]
margin_left = 232.0
margin_top = 240.0
margin_right = 392.0
margin_bottom = 280.0
text = "Main Menu"
reference_path = "res://scenes/MainMenu.tscn"

[node name="SoundToggle" parent="UI/PauseMenu/CanvasLayer/ColorRect" instance=ExtResource( 11 )]
margin_left = 5.0
margin_top = 313.0
margin_right = 165.0
margin_bottom = 353.0
text = "Sound Toggle"
script = null

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 320, 180 )
current = true
script = ExtResource( 6 )

[node name="ScreenShakeTimer" type="Timer" parent="Camera2D"]
one_shot = true

[node name="Background" type="Sprite" parent="."]
visible = false
scale = Vector2( 4, 4 )
z_index = -2
texture = ExtResource( 14 )
centered = false

[node name="MainMenuMusic" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 16 )
volume_db = -20.0
pitch_scale = 1.2
autoplay = true
bus = "World"

[node name="EnemyDeath" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 17 )
volume_db = -20.0

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 319.5, 180 )
scale = Vector2( 31.95, 18.1 )

[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_EnemySpawnTimer_timeout"]
[connection signal="timeout" from="Difficulty" to="." method="_on_Difficulty_timeout"]
[connection signal="pressed" from="UI/PauseMenu/CanvasLayer/ColorRect/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="UI/PauseMenu/CanvasLayer/ColorRect/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
[connection signal="pressed" from="UI/PauseMenu/CanvasLayer/ColorRect/SoundToggle" to="." method="_on_SoundToggle_pressed"]
[connection signal="timeout" from="Camera2D/ScreenShakeTimer" to="Camera2D" method="_on_ScreenShakeTimer_timeout"]
